# T-BLAEQ

./: .clang-format  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/: Doxyfile  buildDoc.sh  mainpage.md  memory_policies.md  query_pipeline.md
src/: HTTPServer.cu  IndexJsonTblaeqServer.cu  IndexJsonTblaeqTool.cpp  IndexJsonTblaeqTool.cu  LayoutConsistencyTest.cu  func.hpp  main.cu
src/Data_Structures/: Data_Structures.cu  Data_Structures.cuh  File.cu  File.cuh
src/Kernel/: SpMSpV.cu  SpMSpV.cuh
src/Kmeans/: CPUKmeans.cuh  CUDAKmeans.cu  CUDAKmeans.cuh  RandomKmeans.cuh
src/MergeSort/: MergeSort.cu  MergeSort.cuh
src/Query/: GridCompact.cu  GridCompact.cuh  KNN.cu  KNN.cuh  L3Kernels.cu  L3Kernels.cuh  Query.cu  Query.cuh  RangePruning.cu  RangePruning.cuh  Refactor.cu  Refactor.cuh  check.cuh  compact.cuh
src/Setup/: Setup.cu  Setup.cuh
src/Test/: QueryTest.cu
src/core/: IndexBuilder.cu  IndexBuilder.cuh  IndexData.cu  IndexData.cuh  IndexSerializer.cu  IndexSerializer.cuh  Memory.cuh  MemoryPolicy.cu  MemoryPolicy.cuh  QueryEngine.cu  QueryEngine.cuh  QueryHandler.cu  QueryHandler.cuh
src/core/strategies/: IQueryStrategy.cuh  L0Strategy.cu  L0Strategy.cuh  L1Strategy.cu  L1Strategy.cuh  L2Strategy.cu  L2Strategy.cuh  L3Strategy.cu  L3Strategy.cuh  StrategyCommon.cu  StrategyCommon.cuh
src/file_index/: IndexJsonTblaeqBuild.cu  IndexJsonTblaeqBuild.cuh  IndexJsonTblaeqJson.cu  IndexJsonTblaeqJson.cuh  IndexJsonTblaeqPicojson.cuh  IndexJsonTblaeqQuery.cu  IndexJsonTblaeqQuery.cuh  IndexJsonTblaeqTypes.cuh  IndexJsonTblaeqUtils.cu  IndexJsonTblaeqUtils.cuh
src/utils/: NVTXProfiler.cu  NVTXProfiler.cuh  Utils.cu  Utils.cuh
